# regis

./: .gitignore  README.md  pyproject.toml
regis/: .env.example  __init__.py  regis.py
regis/src/domain/enums/: risk_approval.py  risk_ratings.py
regis/src/domain/exceptions/: infrastructure.py  repository.py
regis/src/domain/risk_rating/: model.py  regis_response.py
regis/src/infrastructures/env_config/: __init__.py
regis/src/infrastructures/oracle/: __init__.py  infrastructure.py
regis/src/infrastructures/redis/: __init__.py  infrastructure.py
regis/src/repositories/user_enums/: repository.py
tests/: test_regis.py
tests/src/domain/risk_rating/: test_model.py
tests/src/infrastructures/oracle/: stub_client.py  test_infrastructure.py
tests/src/infrastructures/redis/: stub_client.py  test_infrastructure.py
tests/src/repositories/user_enums/: test_repository.py
